# homelab

./: .gitignore  CLAUDE.md  Makefile  README.md  renovate.json
.github/workflows/: build-actual-enablebanking.yml  build-hr-breaker.yml  gpt_pullrequest_updater.yml  komodo-deploy.yaml  openhands-resolver.yml  pr_agent.yml  terraform.yaml  vova-medcenter-delegated-merge.yml
docs/: DOCUMENTATION_GUIDE.md  README.md  terraform-refactoring-guide.md
docs/adr/: 0001-use-talos-linux.md  0005-use-argocd-gitops.md  README.md  template.md
docs/architecture/: 00-homelab-architecture.md  01-system-context.md  02-container-architecture.md  04-deployment-architecture.md  05-security-architecture.md  06-data-architecture.md  README.md
docs/plans/: home-assistant-observability-improvements-2026-06-26.md
docs/runbooks/: bootstrap.md  troubleshooting.md
k8s/components/: README.md
k8s/examples/: pod-with-ephemeral-volume.yaml
komodo/: stacks.toml  sync.toml
komodo/stacks/pipecat-call/: .dockerignore  .env.example  Dockerfile  bot.py  compose.yaml  pyproject.toml  server.py
scripts/: create-external-service-component.sh  create-tls-service-component.sh  komodo-deploy.sh  migrate-external-services.sh
stacks/: README.md
stacks/actual/: Dockerfile.enablebanking  compose.yaml
stacks/bytestash/: compose.yaml
stacks/dozzle/: compose.yaml
stacks/github-runner/: compose.yaml
stacks/grafana-lgtm/: compose.yaml  komodo.yaml
stacks/immich/: compose.yaml  komodo.yaml
terraform/: .terraform.lock.hcl  Makefile  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
(+181 files in other folders)
