[project]
name = "pipecat-call-agent"
version = "0.1.0"
description = "AI phone call agent using Pipecat + Gemini Live + Telnyx"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[google,silero]>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiohttp>=3.11.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[tool.setuptools]
py-modules = ["bot", "server"]

[tool.uv]
package = false
